force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <description>Outbound referrals from SFTS to outside agencies (legal aid, mental health, housing, etc.). Captures who, why, status, and outcome. Per the BOHCC Outside Agency Referral Form workflow.</description>
    <label>Referral</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>