force-app/main/default/objects/Referral__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>What happened with the referral - did the client connect, what services received, follow-up notes.</description>
    <label>Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>