force-app/main/default/objects/Referral__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why this referral was made - what need is being addressed.</description>
    <label>Reason for Referral</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>