force-app/main/default/objects/Referral__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <description>Category of need the referral addresses.</description>
    <label>Referral Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
            <value><fullName>Medical / Health</fullName><default>false</default><label>Medical / Health</label></value>
            <value><fullName>Mental Health</fullName><default>false</default><label>Mental Health</label></value>
            <value><fullName>Substance Use</fullName><default>false</default><label>Substance Use</label></value>
            <value><fullName>Housing</fullName><default>false</default><label>Housing</label></value>
            <value><fullName>Financial</fullName><default>false</default><label>Financial</label></value>
            <value><fullName>Childcare</fullName><default>false</default><label>Childcare</label></value>
            <value><fullName>Employment</fullName><default>false</default><label>Employment</label></value>
            <value><fullName>Education</fullName><default>false</default><label>Education</label></value>
            <value><fullName>Transportation</fullName><default>false</default><label>Transportation</label></value>
            <value><fullName>Food</fullName><default>false</default><label>Food</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>