force-app/main/default/objects/Referral__c/fields/Referred_To_Agency__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Agency__c</fullName>
    <description>Name of the agency or organization the client was referred to.</description>
    <label>Referred To (Agency)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>