force-app/main/default/objects/Referral__c/fields/Referred_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Phone__c</fullName>
    <description>Phone number at the receiving agency, for follow-up.</description>
    <label>Referred To (Phone)</label>
    <type>Phone</type>
</CustomField>