force-app/main/default/objects/Referral__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this referral is for an external benefit/service in our Resources catalog (SNAP, TANF, Medicaid, etc.), link it here. Otherwise leave blank — the free-text Referred_To_Agency field still works for ad-hoc referrals.</description>
    <label>Resource (Catalog)</label>
    <referenceTo>SFTS_Resource__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>