force-app/main/default/objects/Referral__c/validationRules/Referral_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Date_Not_Future</fullName>
    <active>true</active>
    <description>Captures when the referral was made, not when it was planned.</description>
    <errorConditionFormula>Referral_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Referral Date cannot be in the future. Use today or an earlier date when the referral was actually made.</errorMessage>
</ValidationRule>