force-app/main/default/objects/Referral__c/listViews/Pending_Referrals.listView-meta.xml
<ListView>
    <fullName>Pending_Referrals</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Referred_To_Agency__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Referral_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Initiated</value>
    </filters>
    <label>Pending Referrals</label>
</ListView>